<resources>

    <!-- 全局String变量 -->

    <!-- 隐私权县弹窗 -->
    <string name="privacy_dialog_title">至，亲爱的用户</string>
    <string name="privacy_dialog_subtitle">感谢您使用IYing记账助手。</string>
    <string name="privacy_dialog_content">我们非常重视对您个人隐私的保护！为了更好地保护您的个人权益，在使用我们的产品前，请认真阅读《服务协议》，《隐私协议》的内容，同意并接受后我们将为你提供最优质的服务，我们会严格按照政策内容使用和保护您的个人信息，感谢您的信任！</string>
    <string name="privacy_dialog_disgree">不同意</string>
    <string name="privacy_dialog_agree">同意开始使用</string>
    <!-- 主页面 -->
    <string name="maint_activity_nav_header_name_title">爱英小可爱</string>
    <string name="main_activity_nav_header_motto">留下自己的座右铭吧~</string>
    <string name="main_activity_nav_drawer_home">账本</string>
    <string name="main_activity_nav_drawer_account">个人</string>
    <string name="main_activity_nav_drawer_report">报表</string>
    <string name="main_activity_nav_drawer_setting">设置</string>
    <string name="main_activity_nav_drawer_night">夜间</string>
    <string name="main_activity_nav_open">打开</string>
    <string name="main_activity_nav_close">关闭</string>
    <string name="delete_bill_dialog_title">提示</string>
    <string name="delete_bill_dialog_content">确认删除该记录？</string>
    <string name="app_cancel">取消</string>
    <string name="app_confirm">确定</string>
    <string name="app_delete">删除</string>
    <string name="setting_activity_title">设置</string>
    <string name="analysis_activity_title">报表</string>

    <!-- 添加账单页面 -->
    <string name="add_bill_activity_submit">确定</string>
    <string name="add_bill_activity_note">备注:</string>
    <string name="add_bill_activity_note_hint">点击写备注...</string>
    <string name="add_bill_dialog_add_bill_note_hint">请填写备注</string>

    <!-- 个人信息编辑页面 -->
    <string name="person_activity_title">个人信息</string>
    <string name="person_activity_set_motto_success">座右铭编辑完成！</string>
    <string name="person_activity_set_nickname_success">昵称编辑完成！</string>

    <!-- 修改用户昵称和座右铭弹窗 EditNickNameAndMottoDialog -->
    <string name="edit_nickname_motto_dialog_title">修改%s</string>
    <string name="edit_nickname_motto_dialog_nickname">昵称</string>
    <string name="edit_nickname_motto_dialog_motto">座右铭</string>
    <string name="edit_nickname_motto_dialog_nickname_hint">请输入你的昵称</string>
    <string name="edit_nickname_motto_dialog_motto_hint">写点自己想说的话吧~</string>
    <string name="edit_nickname_motto_dialog_confirm">确定</string>
    <string name="edit_nickname_motto_dialog_cancel">取消</string>

    <!-- 报表页面 -->
    <string name="analysis_activity_top_current_monty">当月</string>
    <string name="analysis_activity_empty_data">数据为空，快去记账吧~</string>

    <!-- 自定义view -->
    <string name="input_view_bill_money">￥</string>
    <string name="input_view_bill_number_normal">0</string>

</resources>
