<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">
    <item
        android:id="@+id/nav_home"
        android:icon="@mipmap/app_icon_home"
        android:title="@string/main_activity_nav_drawer_home" />
    <item
        android:id="@+id/nav_account"
        android:icon="@mipmap/app_icon_account"
        android:title="@string/main_activity_nav_drawer_account" />
    <item
        android:id="@+id/nav_report"
        android:icon="@mipmap/app_icon_report"
        android:title="@string/main_activity_nav_drawer_report" />
    <item
        android:id="@+id/nav_setting"
        android:icon="@mipmap/app_icon_setting"
        android:title="@string/main_activity_nav_drawer_setting" />
</menu>
