<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/shape_privacy_dialog_bg"
    android:padding="20dp">

    <TextView
        android:id="@+id/privacy_dialog_title_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/privacy_dialog_title"
        android:textColor="@color/color_212121"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/privacy_dialog_subtitle_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/privacy_dialog_subtitle"
        android:textColor="@color/color_515559"
        android:textSize="14sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/privacy_dialog_title_tv" />

    <TextView
        android:id="@+id/privacy_dialog_content_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:lineSpacingExtra="5dp"
        android:textColor="@color/color_515559"
        android:textSize="14sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/privacy_dialog_subtitle_tv"
        tools:text="@string/privacy_dialog_content" />

    <TextView
        android:id="@+id/privacy_dialog_disagree_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/privacy_dialog_disgree"
        android:textColor="@color/color_5F7D8C"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/privacy_dialog_content_tv" />

    <TextView
        android:id="@+id/privacy_dialog_agree_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/privacy_dialog_agree"
        android:textColor="@color/color_5F7D8C"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="@id/privacy_dialog_disagree_tv"
        app:layout_constraintRight_toRightOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>