<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="300dp"
    android:layout_height="wrap_content"
    android:background="@drawable/shape_privacy_dialog_bg"
    android:padding="20dp">

    <TextView
        android:id="@+id/edit_nickname_motto_dialog_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/edit_nickname_motto_dialog_title"
        android:textColor="@color/color_212121"
        android:textSize="19sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/edit_nickname_motto_dialog_content_et"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:textColor="@color/color_626669"
        android:textSize="15sp"
        app:layout_constraintLeft_toLeftOf="@id/edit_nickname_motto_dialog_title"
        app:layout_constraintTop_toBottomOf="@id/edit_nickname_motto_dialog_title" />

    <TextView
        android:id="@+id/edit_nickname_motto_dialog_confirm_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/edit_nickname_motto_dialog_confirm"
        android:textColor="@color/color_668486"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edit_nickname_motto_dialog_content_et" />

    <TextView
        android:id="@+id/edit_nickname_motto_dialog_cancel_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="30dp"
        android:text="@string/edit_nickname_motto_dialog_cancel"
        android:textColor="@color/color_668486"
        app:layout_constraintBottom_toBottomOf="@id/edit_nickname_motto_dialog_confirm_tv"
        app:layout_constraintRight_toLeftOf="@id/edit_nickname_motto_dialog_confirm_tv" />

</androidx.constraintlayout.widget.ConstraintLayout>